fix click overflow below bookmark thumbnail show settings panel when click 3 dots if there is no hidden items

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -488,6 +488,7 @@ div[class^='settings-menu-item-'] {
     border: 1px solid var(--main-border-color);
     border-radius: 3px;    
     background-color: var(--secondary-bg-color);
+    overflow: hidden;
     cursor: pointer;
 }
 
